--- a/grab-market/index.css
+++ b/grab-market/index.css
@@ -51,7 +51,8 @@ margin, padding을 0으로 전역설정해줌 */
 }
 
 #body > h1 {
-  margin-top: 16px;
+  margin: 10px 0px;
+  font-size: 25px;
 }
 
 #product-list {
@@ -60,6 +61,7 @@ margin, padding을 0으로 전역설정해줌 */
   /* 부모 안에서 자식들의 width를 유지한채로 줄바꿈가능하게함 */
   flex-wrap: wrap;
   margin-top: 12px;
+  
 }
 
 .product-card {
@@ -71,28 +73,30 @@ margin, padding을 0으로 전역설정해줌 */
   border-radius: 12px;
   /* 이미지가 넘어가는 부분은 가리기 */
   overflow: hidden;
+  text-align: center;
 }
 
+
 .product-img {
-  width: 100%;
-  height: 210px;
+  height:50%
 }
 
 .product-contents {
    /* 인라인 수직정렬 flex-direction: column */
   display: flex;
   flex-direction: column;
-  padding: 8px;
+  margin: 10px;
+  text-align: left;
 }
 
 .product-name {
-  font-size: 14px;
+  font-size: 15px;
+  padding:5px 0px ;
 }
 
 .product-price {
   font-size: 16px;
   font-weight: 600;
-  margin-top: 4px;
 }
 
 .product-seller {
@@ -101,7 +105,7 @@ margin, padding을 0으로 전역설정해줌 */
   /* 수직방향의 가운데 정렬 */
   align-items: center;
   margin-top: 12px;
-}
+}  
 
 .product-avatar {
   width: 24px;
